2000-05-04  James Henstridge  <james@daa.com.au>

	* codegen/codegen.py (typetmpl): leave some fields as blanks to be
	filled in by pygtk_register_class.
	(write_class): leave getattr as blank if we don't specify a
	getattr routine.
	(write_source): just call pygtk_register_class to register the
	types.

	* gtk/gtkobject-support.c (pygtk_register_class): make this
	function actually call PyExtensionClass_Export for you, and fill
	in some of the class functions if they are missing.  This is for
	convenience and to make the windows port easier in the future.

2000-04-10  James Henstridge  <james@daa.com.au>

	* ExtensionClass.c (subclass_coerce): fix bug in ExtensionClass code
	found by Toby Reeves.

2000-04-06  James Henstridge  <james@daa.com.au>

	* codegen/argtypes.py (StringArg.write_param): if the default is set
	to NULL, don't treat the default as a string.
	(BoxedArg.write_param): generated code wasn't understanding NULL
	correctly.

	* codegen/codegen.py: make keyword lists static in generated code.

	* gtk/gtk.override: add keyword arguments to lots of overriden
	functions.  Also, make keyword lists static.

	* codegen/codegen.py: if an overriden method wants to accept keyword
	arguments, let it.

	* codegen/override.py (Overrides): allow you to set a `kwargs' flag
	for overridden function bodies so that they can accept keyword
	argument lists.

	* codegen/codegen.py: applied Toby D. Reeves' patch to handle keyword
	arguments in generated wrappers.  This makes the new pygtk even
	closer to the old one.  Very useful patch.

	* acinclude.m4, configure.in (AM_CHECK_PYTHON_HEADERS): renamed macro
	to more appropriate name.

2000-03-31  James Henstridge  <james@daa.com.au>

	* gtk/pygtk-private.h: include config.h

	* acconfig.h: config.h template

	* configure.in: use a config.h header file.

	* gtk/gtk.override (_wrap_gtk_label_get): an override for gtk_label_get

	* codegen/codegen.py, gtk/pygtk.h, gtk/gtkobject-support.c: reenabled